cluster/prod/platform/cilium-ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-internal
spec:
  ingressClassName: internal
  rules:
  - host: hubble.k8s.lysakermoen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hubble-ui
            port:
              number: 80
  tls:
  - hosts:
    - hubble.k8s.lysakermoen.com
    secretName: hubble-ui-tls
